// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. date and times publication 1`] = `
Array [
  <time
    dateTime="2017-01-01T04:32:00.000Z"
  >
    Sunday January 01 2017, 4:32am
  </time>,
  <span>
    , The Times
  </span>,
]
`;

exports[`2. date and sundaytimes publication 1`] = `
Array [
  <time
    dateTime="2017-01-01T04:32:00.000Z"
  >
    Sunday January 01 2017, 4:32am
  </time>,
  <span>
    , The Sunday Times
  </span>,
]
`;

exports[`3. date and no given publication 1`] = `
<time
  dateTime="2017-01-01T04:32:00.000Z"
>
  Sunday January 01 2017, 4:32am
</time>
`;

exports[`4. date and no day 1`] = `
<time
  dateTime="2017-01-01T04:32:00.000Z"
>
  January 01 2017, 4:32am
</time>
`;
